changing the name

--- a/.env.example
+++ b/.env.example
@@ -8,7 +8,7 @@
 # =====================================================
 
 # === ОСНОВНА ИНФОРМАЦИЯ ===
-NEXT_PUBLIC_BUSINESS_NAME="AlexCleaning"
+NEXT_PUBLIC_BUSINESS_NAME="CleanLeaders"
 NEXT_PUBLIC_TAGLINE="Професионално почистване Пловдив"
 NEXT_PUBLIC_DESCRIPTION="Трансформираме вашето пространство с безкомпромисно внимание към детайла и професионална техника Kärcher."
 
@@ -17,14 +17,14 @@ NEXT_PUBLIC_PHONE_1="0899 299 825"
 NEXT_PUBLIC_PHONE_1_LINK="+359899299825"
 NEXT_PUBLIC_PHONE_2="0879 889 800"
 NEXT_PUBLIC_PHONE_2_LINK="+359879889800"
-NEXT_PUBLIC_EMAIL="info@alexcleaning.bg"
+NEXT_PUBLIC_EMAIL="info@cleanleaders.bg"
 
 # === АДРЕС ===
 NEXT_PUBLIC_CITY="Пловдив"
 NEXT_PUBLIC_ADDRESS="Пловдив, България"
 
 # === СОЦИАЛНИ МРЕЖИ ===
-NEXT_PUBLIC_INSTAGRAM="https://www.instagram.com/alexcleaning.plovdiv/"
+NEXT_PUBLIC_INSTAGRAM="https://www.instagram.com/cleanleaders/"
 NEXT_PUBLIC_FACEBOOK=""
 
 # === СТАТИСТИКИ ===
@@ -36,4 +36,4 @@ NEXT_PUBLIC_RATING="5.0"
 NEXT_PUBLIC_DISCOUNT_PERCENT="20"
 
 # === SEO ===
-NEXT_PUBLIC_SITE_URL="https://alexcleaning.bg"
+NEXT_PUBLIC_SITE_URL="https://cleanleaders.bg"
